# teensy40-rs

./: .rustfmt.toml  Cargo.toml  layout.ld
.cargo/: config  win-build.bat
src/: main.rs
src/teensy40/: allocator.rs  bootdata.rs  ccm.rs  flashconfig.rs  gpio.rs  iomuxc.rs  ivt.rs  mod.rs  startup.rs  watchdog.rs
src/teensy40/cm7/: cache.rs  fpu.rs  mod.rs  mpu.rs  nvic.rs  scb.rs  systick.rs
