[package]
name = "teensy_audio_led"
version = "0.1.0"
authors = ["Michael Fabian 'Xaymar' Dirks <info@xaymar.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit_field = "^0.10.0"
volatile = "^0.2.6"
bitflags = "^1.2.1"
